Fix right-click menu design confusion - make UI intuitive
Following Linus principle: "用户界面应该直观明确"

BEFORE: Confusing menu labels caused user frustration
- "Download File" vs "Save to System" - unclear difference
- Users couldn't distinguish browser download vs file dialog save

AFTER: Crystal clear menu labels
- "Download to Browser" - saves to default browser download folder
- "Save as..." - opens file dialog to choose location

TRANSLATION UPDATES:
English:
- downloadFile: "Download File" → "Download to Browser"
- downloadFiles: "Download {{count}} files" → "Download {{count}} files to Browser"
- saveToSystem: "Save to System" → "Save as..."
- saveFilesToSystem: "Save {{count}} files to system" → "Save {{count}} files as..."

Chinese:
- downloadFile: "下载文件" → "下载到浏览器"
- downloadFiles: "下载 {{count}} 个文件" → "下载 {{count}} 个文件到浏览器"
- saveToSystem: "保存到系统" → "另存为..."
- saveFilesToSystem: "保存 {{count}} 个文件到系统" → "另存 {{count}} 个文件为..."

Result: Users now understand the difference immediately.
No more confusion about which download method to use.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -653,7 +653,7 @@
     "folder": "Folder",
     "connectToSsh": "Connect to SSH to use file operations",
     "uploadFile": "Upload File",
-    "downloadFile": "Download File",
+    "downloadFile": "Download to Browser",
     "newFile": "New File",
     "newFolder": "New Folder",
     "rename": "Rename",
@@ -720,7 +720,7 @@
     "properties": "Properties",
     "preview": "Preview",
     "refresh": "Refresh",
-    "downloadFiles": "Download {{count}} files",
+    "downloadFiles": "Download {{count}} files to Browser",
     "copyFiles": "Copy {{count}} items",
     "cutFiles": "Cut {{count}} items",
     "deleteFiles": "Delete {{count}} items",
@@ -791,7 +791,7 @@
     "dragFilesToWindowToDownload": "Drag files outside window to download",
     "openTerminalHere": "Open Terminal Here",
     "run": "Run",
-    "saveToSystem": "Save to System",
+    "saveToSystem": "Save as...",
     "selectLocationToSave": "Select Location to Save",
     "openTerminalInFolder": "Open Terminal in This Folder",
     "openTerminalInFileLocation": "Open Terminal at File Location",
@@ -814,8 +814,8 @@
     "clearAllRecentFiles": "Clear all recent files",
     "unpinFile": "Unpin file",
     "removeShortcut": "Remove shortcut",
-    "saveFilesToSystem": "Save {{count}} files to system",
-    "saveToSystem": "Save to system",
+    "saveFilesToSystem": "Save {{count}} files as...",
+    "saveToSystem": "Save as...",
     "pinFile": "Pin file",
     "addToShortcuts": "Add to shortcuts",
     "selectLocationToSave": "Select location to save",
