--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -668,7 +668,7 @@
     "folder": "文件夹",
     "connectToSsh": "连接 SSH 以使用文件操作",
     "uploadFile": "上传文件",
-    "downloadFile": "下载文件",
+    "downloadFile": "下载到浏览器",
     "newFile": "新建文件",
     "newFolder": "新建文件夹",
     "rename": "重命名",
@@ -735,7 +735,7 @@
     "properties": "属性",
     "preview": "预览",
     "refresh": "刷新",
-    "downloadFiles": "下载 {{count}} 个文件",
+    "downloadFiles": "下载 {{count}} 个文件到浏览器",
     "copyFiles": "复制 {{count}} 个项目",
     "cutFiles": "剪切 {{count}} 个项目",
     "deleteFiles": "删除 {{count}} 个项目",
@@ -781,7 +781,7 @@
     "dragFilesToWindowToDownload": "拖拽文件到窗口外下载",
     "openTerminalHere": "在此处打开终端",
     "run": "运行",
-    "saveToSystem": "保存到系统",
+    "saveToSystem": "另存为...",
     "selectLocationToSave": "选择位置保存",
     "openTerminalInFolder": "在此文件夹打开终端",
     "openTerminalInFileLocation": "在文件位置打开终端",
@@ -821,8 +821,8 @@
     "clearAllRecentFiles": "清除所有最近访问",
     "unpinFile": "取消固定",
     "removeShortcut": "移除快捷方式",
-    "saveFilesToSystem": "保存 {{count}} 个文件到系统",
-    "saveToSystem": "保存到系统",
+    "saveFilesToSystem": "另存 {{count}} 个文件为...",
+    "saveToSystem": "另存为...",
     "pinFile": "固定文件",
     "addToShortcuts": "添加到快捷方式",
     "selectLocationToSave": "选择位置保存",
