Clean up files, fix bugs in file manager, update api ports, etc.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -87,7 +87,7 @@
     "keyPassphraseOptional": "Optional: leave empty if your key has no passphrase",
     "leaveEmptyToKeepCurrent": "Leave empty to keep current value",
     "uploadKeyFile": "Upload Key File",
-    "generateKeyPair": "Generate Key Pair",
+    "generateKeyPairButton": "Generate Key Pair",
     "sshKeyGenerationNotImplemented": "SSH key generation feature coming soon",
     "connectionTestingNotImplemented": "Connection testing feature coming soon",
     "testConnection": "Test Connection",
@@ -123,7 +123,7 @@
     "editCredentialDescription": "Update the credential information",
     "listView": "List",
     "folderView": "Folders",
-    "unknown": "Unknown",
+    "unknownCredential": "Unknown",
     "confirmRemoveFromFolder": "Are you sure you want to remove \"{{name}}\" from folder \"{{folder}}\"? The credential will be moved to \"Uncategorized\".",
     "removedFromFolder": "Credential \"{{name}}\" removed from folder successfully",
     "failedToRemoveFromFolder": "Failed to remove credential from folder",
@@ -144,7 +144,7 @@
     "detectedKeyType": "Detected key type",
     "detectingKeyType": "detecting...",
     "optional": "Optional",
-    "generateKeyPair": "Generate New Key Pair",
+    "generateKeyPairNew": "Generate New Key Pair",
     "generateEd25519": "Generate Ed25519",
     "generateECDSA": "Generate ECDSA",
     "generateRSA": "Generate RSA",
@@ -154,6 +154,16 @@
     "invalidKey": "Invalid Key",
     "detectionError": "Detection Error",
     "unknown": "Unknown"
+  },
+  "dragIndicator": {
+    "error": "Error: {{error}}",
+    "dragging": "Dragging {{fileName}}",
+    "preparing": "Preparing {{fileName}}",
+    "readySingle": "Ready to download {{fileName}}",
+    "readyMultiple": "Ready to download {{count}} files",
+    "batchDrag": "Drag {{count}} files to desktop",
+    "dragToDesktop": "Drag to desktop",
+    "canDragAnywhere": "You can drag files anywhere on your desktop"
   },
   "sshTools": {
     "title": "SSH Tools",
@@ -190,7 +200,7 @@
     "saveError": "Error saving configuration",
     "saving": "Saving...",
     "saveConfig": "Save Configuration",
-    "helpText": "Enter the URL where your Termix server is running (e.g., http://localhost:8081 or https://your-server.com)"
+    "helpText": "Enter the URL where your Termix server is running (e.g., http://localhost:30001 or https://your-server.com)"
   },
   "common": {
     "close": "Close",
@@ -294,7 +304,10 @@
     "failedToInitiatePasswordReset": "Failed to initiate password reset",
     "failedToVerifyResetCode": "Failed to verify reset code",
     "failedToCompletePasswordReset": "Failed to complete password reset",
-    "documentation": "Documentation"
+    "documentation": "Documentation",
+    "retry": "Retry",
+    "checking": "Checking...",
+    "checkingDatabase": "Checking database connection..."
   },
   "nav": {
     "home": "Home",
@@ -719,6 +732,9 @@
     "failedToCreateFile": "Failed to create file",
     "folderCreatedSuccessfully": "Folder \"{{name}}\" created successfully",
     "failedToCreateFolder": "Failed to create folder",
+    "failedToCreateItem": "Failed to create item",
+    "operationFailed": "{{operation}} operation failed for {{name}}: {{error}}",
+    "failedToResolveSymlink": "Failed to resolve symlink",
     "itemDeletedSuccessfully": "{{type}} deleted successfully",
     "itemsDeletedSuccessfully": "{{count}} items deleted successfully",
     "failedToDeleteItems": "Failed to delete items",
@@ -774,7 +790,7 @@
     "serverError": "Server Error",
     "error": "Error",
     "requestFailed": "Request failed with status code",
-    "unknown": "unknown",
+    "unknownFileError": "unknown",
     "cannotReadFile": "Cannot read file",
     "noSshSessionId": "No SSH session ID available",
     "noFilePath": "No file path available",
@@ -925,7 +941,7 @@
     "disconnected": "Disconnected",
     "connecting": "Connecting...",
     "disconnecting": "Disconnecting...",
-    "unknown": "Unknown",
+    "unknownTunnelStatus": "Unknown",
     "error": "Error",
     "failed": "Failed",
     "retrying": "Retrying",
@@ -962,7 +978,7 @@
     "dynamic": "Dynamic",
     "noSshTunnels": "No SSH Tunnels",
     "createFirstTunnelMessage": "Create your first SSH tunnel to get started. Use the SSH Manager to add hosts with tunnel connections.",
-    "unknown": "Unknown",
+    "unknownConnectionStatus": "Unknown",
     "connected": "Connected",
     "connecting": "Connecting...",
     "disconnecting": "Disconnecting...",
@@ -1105,7 +1121,7 @@
     "forbidden": "Access forbidden",
     "serverError": "Server error",
     "networkError": "Network error",
-    "databaseConnection": "Could not connect to the database. Please try again later.",
+    "databaseConnection": "Could not connect to the database.",
     "unknownError": "Unknown error",
     "failedPasswordReset": "Failed to initiate password reset",
     "failedVerifyCode": "Failed to verify reset code",
@@ -1143,7 +1159,15 @@
     "reconnecting": "Reconnecting...",
     "processing": "Processing...",
     "pleaseWait": "Please wait...",
-    "registrationDisabled": "New account registration is currently disabled by an admin. Please log in or contact an administrator."
+    "registrationDisabled": "New account registration is currently disabled by an admin. Please log in or contact an administrator.",
+    "databaseConnected": "Database connected successfully",
+    "databaseConnectionFailed": "Failed to connect to the database server",
+    "checkServerConnection": "Please check your server connection and try again",
+    "resetCodeSent": "Reset code sent to your email",
+    "codeVerified": "Code verified successfully",
+    "passwordResetSuccess": "Password reset successfully",
+    "loginSuccess": "Login successful",
+    "registrationSuccess": "Registration successful"
   },
   "profile": {
     "title": "User Profile",
@@ -1306,6 +1330,9 @@
     "updateKey": "Update Key",
     "productionFolder": "Production",
     "databaseServer": "Database Server",
+    "developmentServer": "Development Server",
+    "developmentFolder": "Development",
+    "webServerProduction": "Web Server - Production",
     "unknownError": "Unknown error",
     "failedToInitiatePasswordReset": "Failed to initiate password reset",
     "failedToVerifyResetCode": "Failed to verify reset code",
