--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -88,6 +88,19 @@
     "leaveEmptyToKeepCurrent": "Leave empty to keep current value",
     "uploadKeyFile": "Upload Key File",
     "generateKeyPairButton": "Generate Key Pair",
+    "generateKeyPair": "Generate Key Pair",
+    "generateKeyPairDescription": "Generate a new SSH key pair. If you want to protect the key with a passphrase, enter it in the Key Password field below first.",
+    "deploySSHKey": "Deploy SSH Key",
+    "deploySSHKeyDescription": "Deploy public key to target server",
+    "sourceCredential": "Source Credential",
+    "targetHost": "Target Host",
+    "deploymentProcess": "Deployment Process",
+    "deploymentProcessDescription": "This will safely add the public key to the target host's ~/.ssh/authorized_keys file without overwriting existing keys. The operation is reversible.",
+    "chooseHostToDeploy": "Choose a host to deploy to...",
+    "deploying": "Deploying...",
+    "name": "Name",
+    "noHostsAvailable": "No hosts available",
+    "noHostsMatchSearch": "No hosts match your search",
     "sshKeyGenerationNotImplemented": "SSH key generation feature coming soon",
     "connectionTestingNotImplemented": "Connection testing feature coming soon",
     "testConnection": "Test Connection",
@@ -266,6 +279,9 @@
     "sshTools": "SSH Tools",
     "english": "English",
     "chinese": "Chinese",
+    "cancel": "Cancel",
+    "username": "Username",
+    "name": "Name",
     "login": "Login",
     "logout": "Logout",
     "register": "Register",
@@ -966,6 +982,7 @@
     "connecting": "Connecting...",
     "disconnecting": "Disconnecting...",
     "unknownTunnelStatus": "Unknown",
+    "unknown": "Unknown",
     "error": "Error",
     "failed": "Failed",
     "retrying": "Retrying",
@@ -1011,7 +1028,10 @@
     "disconnect": "Disconnect",
     "connect": "Connect",
     "canceling": "Canceling...",
-    "endpointHostNotFound": "Endpoint host not found"
+    "endpointHostNotFound": "Endpoint host not found",
+    "discord": "Discord",
+    "githubIssue": "GitHub issue",
+    "forHelp": "for help"
   },
   "serverStats": {
     "title": "Server Statistics",
